--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project3_Map</title>
+  <title>Project3_Map-leaflet</title>
+
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -16,15 +18,22 @@
     crossorigin=""></script>
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="mapstyle.css">
+  <link rel="stylesheet" type="text/css" href="static\css\mapstyle.css">
 </head>
 
 <body>
+  <!-- Header -->
+  <h1>Project3_Map-leaflet</h1>
+  <h2>Team: Noelle Watson, Vanessa Dumlao, Xuexuan Xu</h2>
+
   <!-- The div where we'll insert our map -->
   <div id="map"></div>
-
+  
   <!-- JavaScript file -->
-  <script type="text/javascript" src="map.js"></script>
+  <script type="text/javascript" src="static\js\logic-map.js"></script>
+  <!-- <script type="text/javascript" src="map_r2.js"></script> -->
+
+
 </body>
 
 </html>
