--- a/filter.html
+++ b/filter.html
@@ -61,6 +61,6 @@
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
-    <script src="logic.js"></script>
+    <script src="filter.js"></script>
 </body>
 </html>
