--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     crossorigin=""></script>
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static\css\mapstyle.css">
+  <link rel="stylesheet" type="text/css" href="static/css/mapstyle.css">
 </head>
 
 <body>
@@ -30,8 +30,8 @@
   <div id="map"></div>
   
   <!-- JavaScript file -->
-  <script type="text/javascript" src="static\js\logic-map.js"></script>
-  <!-- <script type="text/javascript" src="map_r2.js"></script> -->
+  <script type="text/javascript" src="static/js/logic-map.js"></script>
+
 
 
 </body>
