adding in any files that I haven't pushed yet

--- a/index_nw.html
+++ b/index_nw.html
@@ -47,6 +47,11 @@
         </div>    
         <div class="row">
             <div class="col-md-12">
+              <div id="bar"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-13">
               <div id="summary_table1"></div>
             </div>
           </div>
