--- a/index_nw.html
+++ b/index_nw.html
@@ -2,63 +2,78 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Californa Houses Search</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Californa Houses Search</title>
 
+  <style>
+    /* Style to make the table scrollable */
+    .scrollable-table {
+      width: 100%;
+      overflow: auto;
+      max-height: 300px;
+      /* Set the max height as needed */
+    }
+
+    /* Optional: Style for the table */
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th,
+    td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+  </style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <h3>Filters</h3>
-            <label for="city">City:</label>
-            <select id="city">
-                <option value="">All Cities</option>
-                <option value="San Diego">San Diego</option>
-                <option value="Los Angeles">Los Angeles</option>
-                <option value="New York">New York</option>
-            </select>
+  <div class="container">
+    <div class="row">
+      <h3>Filters</h3>
+      <label for="cityDropdown">Select a City:</label>
+      <select id="cityDropdown" onchange="filterAndRefreshTable()">
+      </select>
 
-            <label for="price-min">Min Price($):</label>
-            <input type="number" id="price-min" min="0" value="0">
+      <label for="price-min">Min Price($):</label>
+      <input type="number" id="price-min" min="0" value="0">
 
-            <label for="price-max">Max Price($):</label>
-            <input type="number" id="price-max" min="0" value="10000">
+      <label for="price-max">Max Price($):</label>
+      <input type="number" id="price-max" min="0" value="100000000">
 
-            <label for="bedroom-min">Min Bedroom:</label>
-            <input type="number" id="bedroom-min" min="0" value="0">
+      <label for="bedroom-min">Min Bedroom:</label>
+      <input type="number" id="bedroom-min" min="0" value="0">
 
-            <label for="bedroom-max">Max Bedroom:</label>
-            <input type="number" id="bedroom-max" min="0" value="20">
+      <label for="bedroom-max">Max Bedroom:</label>
+      <input type="number" id="bedroom-max" min="0" value="20">
 
-            <label for="bathroom-min">Min Bathroom:</label>
-            <input type="number" id="bathroom-min" min="0" value="0">
+      <label for="bathroom-min">Min Bathroom:</label>
+      <input type="number" id="bathroom-min" min="0" value="0">
 
-            <label for="bathroom-max">Max Bathroom:</label>
-            <input type="number" id="bathroom-max" min="0" value="20">
+      <label for="bathroom-max">Max Bathroom:</label>
+      <input type="number" id="bathroom-max" min="0" value="20">
 
-            <button id="filter-btn">Apply</button>
-
-        </div>    
-        <div class="row">
-            <div class="col-md-12">
-              <div id="bar"></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-13">
-              <div id="summary_table1"></div>
-            </div>
-          </div>
+      <button id="filter-btn">Apply</button>
+    <div class="row"></div>  
+      <div class="scrollable-table" id="filteredTableContainer"></div>
     </div>
+    <div class="row">      
+        <div id="bar"></div>      
+    </div>
+    <div class="row">      
+      <div id="summary_table"></div>      
+    </div>
+  </div>
 
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="summary_table.js"></script>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!-- <script src="summary_table.js"></script> -->
+  <script src="copy_filter.js"></script>
+
 </body>
+
 </html>
