--- a/index_nw.html
+++ b/index_nw.html
@@ -6,6 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Californa Houses Search</title>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin="" />
+
+  <!-- Leaflet JavaScript code -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>
+
+  <!-- Our CSS -->
+  <link rel="stylesheet" type="text/css" href="static/css/mapstyle.css">
 
   <style>
     /* Style to make the table scrollable */
@@ -60,19 +74,23 @@
       <button id="filter-btn">Apply</button>
     <div class="row"></div>  
       <div class="scrollable-table" id="filteredTableContainer"></div>
-    </div>
+    
     <div class="row">      
-        <div id="bar"></div>      
+      <div id="map" style="height: 400px;"></div>      
     </div>
+    </div>  
     <div class="row">      
-      <div id="summary_table"></div>      
+        <div id="bar"></div>    
     </div>
+
   </div>
 
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <!-- <script src="summary_table.js"></script> -->
-  <script src="copy_filter.js"></script>
+  <script src="Logic_filter&Bar.js"></script>
+  <script type="text/javascript" src="static/js/copy_logic-map.js"></script>
 
 </body>
 
