--- a/index_all elements.html
+++ b/index_all elements.html
@@ -88,8 +88,8 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <!-- <script src="summary_table.js"></script> -->
-  <script src="Logic_filter&Bar.js"></script>
+  <!-- <script src="static/js/summary_table.js"></script> -->
+  <script src="static/js/Logic_filter&Bar.js"></script>
   <script type="text/javascript" src="static/js/copy_logic-map.js"></script>
 
 </body>
