--- a/index_all elements.html
+++ b/index_all elements.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Californa Houses Search</title>
+  <title>California Real Estate Listing Search</title>
 
 
   <!-- Leaflet CSS -->
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <h1>Project 3: Californa Houses Search</h1>
+    <h1>Project 3: California Real Estate Listing Search</h1>
     <h2>Team: Noelle Watson, Vanessa Dumlao, Xuexuan Xu</h2>
 
   <div class="row">
